# bakery_app

./: CMakeLists.txt  DatabaseManager.cpp  MainWindow.cpp  MainWindow.h  README.md
